--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       color: black;
     }
     .content {
-      margin: 40px 5cm; /* 5 cm margin on the left and right */
+      margin: 40px 7cm; /* Increased margin to 7 cm */
     }
     .header {
       display: flex;
