--- a/index.html
+++ b/index.html
@@ -141,15 +141,23 @@
       <h2>Resources</h2>
       <h3>Stata Resources</h3>
       <ul>
-        <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a>: Stata resources guide</li>
-        <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a>: Comprehensive Stata tutorials</li>
-        <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a>: Stata learning resources</li>
-        <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a>: Stata guides for social science research</li>
+        <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
+        <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
+        <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
+        <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
       </ul>
       <h3>LaTeX Resources</h3>
       <ul>
         <li><a href="https://www.overleaf.com/latex/templates" target="_blank">Overleaf Templates</a></li>
       </ul>
+
+      <h3>Data</h3>
+      <ul>
+        <li><a href="https://www.ipums.org/" target="_blank">IPUMS</a></li>
+        <li><a href="https://www.census.gov/programs-surveys/cps.html" target="_blank">Current Population Survey (CPS)</a></li>
+        <li><a href="https://www.nber.org/research/data?page=1&perPage=50" target="_blank">Public Use Data Archive</a></li>
+      </ul>
+      
     </div>
   </div>
 
