--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <ul>
         <li><a href="https://www.ipums.org/" target="_blank">IPUMS</a></li>
         <li><a href="https://www.census.gov/programs-surveys/cps.html" target="_blank">Current Population Survey (CPS)</a></li>
-        <li><a href="https://www.nber.org/research/data?page=1&perPage=50" target="_blank">Public Use Data Archive</a></li>
+        <li><a href="https://www.nber.org/research/data?page=1&perPage=50" target="_blank">NBER Public Use Data Archive</a></li>
       </ul>
       
     </div>
