--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
     .hidden {
       display: none;
     }
+    .last-updated {
+      position: fixed;
+      bottom: 10px;
+      right: 10px;
+      font-size: 12px;
+      color: #333;
+    }
   </style>
 </head>
 <body>
@@ -162,7 +169,12 @@
     </div>
   </div>
 
-  <!-- JavaScript for Section Navigation -->
+  <!-- Last Updated Section -->
+  <div class="last-updated" id="last-updated">
+    Last updated on: <span id="update-date"></span>
+  </div>
+
+  <!-- JavaScript for Section Navigation and Last Updated Date -->
   <script>
     function showSection(section) {
       const sections = ['home', 'research', 'teaching', 'resources'];
@@ -175,6 +187,14 @@
     // Show home section by default on page load
     document.addEventListener('DOMContentLoaded', function() {
       showSection('home');
+      
+      // Automatically set the last updated date
+      const lastUpdatedDate = new Date(document.lastModified);
+      document.getElementById('update-date').textContent = lastUpdatedDate.toLocaleDateString('en-US', {
+        year: 'numeric',
+        month: 'long',
+        day: 'numeric'
+      });
     });
   </script>
 </body>
