--- a/index.html
+++ b/index.html
@@ -159,13 +159,31 @@
         <li><a href="https://www.overleaf.com/latex/templates" target="_blank">Overleaf Templates</a></li>
       </ul>
 
-      <h3>Data</h3>
+      <h3>Data Resources</h3>
+      <h4>Surveys</h4>
       <ul>
         <li><a href="https://www.ipums.org/" target="_blank">IPUMS</a></li>
         <li><a href="https://www.census.gov/programs-surveys/cps.html" target="_blank">Current Population Survey (CPS)</a></li>
         <li><a href="https://www.nber.org/research/data?page=1&perPage=50" target="_blank">NBER Public Use Data Archive</a></li>
       </ul>
-      
+
+      <h4>Health-related Surveys</h4>
+      <ul>
+      <a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey (NHIS)</a>
+      <a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a>
+      <a href="https://www.cdc.gov/nchs/nhanes/index.htm" target="_blank">National Health and Nutrition Examination Survey (NHANES)</a>
+      <a href="https://www.meps.ahrq.gov/mepsweb/" target="_blank">Medical Expenditure Panel Survey (MEPS)</a>
+      <a href="https://nsduhweb.rti.org/respweb/homepage.cfm" target="_blank">National Survey on Drug Use and Health (NSDUH)</a>
+      <a href="https://www.cdc.gov/healthyyouth/data/yrbs/index.htm" target="_blank">Youth Risk Behavior Surveillance System (YRBSS)</a>
+      <a href="https://www.cdc.gov/nchs/ahcd/namcs_participant.htm" target="_blank">National Ambulatory Medical Care Survey (NAMCS)</a>
+      <a href="https://www.cdc.gov/nchs/ahcd/about_ahcd.htm" target="_blank">National Hospital Ambulatory Medical Care Survey (NHAMCS)</a>
+      <a href="https://www.hcup-us.ahrq.gov/" target="_blank">Healthcare Cost and Utilization Project (HCUP)</a>
+      <a href="https://www.cdc.gov/nchs/nvss/index.htm" target="_blank">National Vital Statistics System (NVSS)</a>
+      <a href="https://www.bls.gov/tus/" target="_blank">American Time Use Survey (ATUS)</a>
+      <a href="https://seer.cancer.gov/" target="_blank">Surveillance, Epidemiology, and End Results Program (SEER)</a>
+      <a href="https://www.niaaa.nih.gov/research/nesarc-iii" target="_blank">National Epidemiologic Survey on Alcohol and Related Conditions (NESARC)</a>
+      </ul>
+     
     </div>
   </div>
 
