--- a/index.html
+++ b/index.html
@@ -147,19 +147,19 @@
     <!-- Resources Section -->
     <div id="resources" class="section hidden">
       <h2>Resources</h2>
-      <h3>Stata Resources</h3>
+      <h3><u>Stata Resources</u></h3>
       <ul>
         <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
         <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
         <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
         <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
       </ul>
-      <h3>LaTeX Resources</h3>
+      <h3><u>LaTeX Resources</u></h3>
       <ul>
         <li><a href="https://www.overleaf.com/latex/templates" target="_blank">Overleaf Templates</a></li>
       </ul>
 
-      <h3>Data Resources</h3>
+      <h3><u>Data Resources</u></h3>
       <h4>Surveys</h4>
       <ul>
         <li><a href="https://www.ipums.org/" target="_blank">IPUMS</a></li>
