--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
       <li><a href="https://www.meps.ahrq.gov/mepsweb/" target="_blank">Medical Expenditure Panel Survey (MEPS)</a></li>
       <li><a href="https://nsduhweb.rti.org/respweb/homepage.cfm" target="_blank">National Survey on Drug Use and Health (NSDUH)</a></li>
       <li><a href="https://www.cdc.gov/healthyyouth/data/yrbs/index.htm" target="_blank">Youth Risk Behavior Surveillance System (YRBSS)</a></li>
-      <li><a href="https://www.cdc.gov/nchs/ahcd/namcs_participant.htm" target="_blank">National Ambulatory Medical Care Survey (NAMCS)</a></li>
-      <li><a href="https://www.cdc.gov/nchs/ahcd/about_ahcd.htm" target="_blank">National Hospital Ambulatory Medical Care Survey (NHAMCS)</a></li>
+      <li><a href="https://www.cdc.gov/nchs/namcs/about/?CDC_AAref_Val=https://www.cdc.gov/nchs/ahcd/about_ahcd.htm" target="_blank">National Ambulatory Medical Care Survey (NAMCS)</a></li>
+      <li><a href="https://www.cdc.gov/nchs/nhamcs/about/?CDC_AAref_Val=https://www.cdc.gov/nchs/ahcd/about_ahcd.htm" target="_blank">National Hospital Ambulatory Medical Care Survey (NHAMCS)</a></li>
       <li><a href="https://www.hcup-us.ahrq.gov/" target="_blank">Healthcare Cost and Utilization Project (HCUP)</a></li>
       <li><a href="https://www.cdc.gov/nchs/nvss/index.htm" target="_blank">National Vital Statistics System (NVSS)</a></li>
       <li><a href="https://www.bls.gov/tus/" target="_blank">American Time Use Survey (ATUS)</a></li>
