--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
       <h3>TA Courses</h3>
       <p>Graduate Courses:</p>
       <ul>
-        <li>ECON814 | Macroeconomics Theory II | Spring 2023</li>
-        <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024</li>
+        <li>ECON814 | Macroeconomics Theory II | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/">Dr. Hans A. Holter</a></li>
+        <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/">Dr. Emily Battaglia</a></li>
       </ul>
       <p>Undergraduate Courses:</p>
       <ul>
-        <li>ECON301 | Intermediate Micro with Calculus | Fall 2021</li>
-        <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023</li>
-        <li>ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024</li>
+        <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/">Dr. Desmond Toohey</a></li>
+        <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/">Dr. Hans A. Holter</a></li>
+        <li>ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.emilylbattaglia.com/">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/">Dr. Olga Gorbachev</a></li>
       </ul>
     </div>
 
