--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
-      padding: 0.5rem;
+      padding: 10px;
     }
     .navbar-left {
       color: white;
-      padding: 14px 16px;
+      padding: 10px;
+      display: inline-block;
+      font-weight: bold;
     }
     .navbar-right a {
       color: white;
-      padding: 14px 16px;
+      padding: 10px;
       text-decoration: none;
       display: inline-block;
     }
@@ -35,67 +37,79 @@
       color: black;
     }
     .content {
-      margin: 20px 5vw;
+      margin: 20px;
     }
     .header {
       display: flex;
-      flex-direction: column;
       align-items: center;
       margin-bottom: 20px;
-    }
-    @media(min-width: 768px) {
-      .header {
-        flex-direction: row;
-      }
-      .navbar-right a {
-        padding: 0.5rem 1rem;
-      }
+      flex-wrap: wrap;
     }
     .profile-photo {
-      width: 150px;
-      height: 150px;
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
       object-fit: cover;
-      margin: 0 auto 10px;
+      margin-right: 20px;
       border: 2px solid #0a3d62;
     }
     .header-text {
       flex-grow: 1;
-      text-align: center;
-    }
-    @media(min-width: 768px) {
-      .header-text {
-        text-align: left;
-        margin-left: 20px;
-      }
     }
     h1, h2 {
       color: #333;
     }
+    p {
+      margin: 10px 0;
+    }
     .section {
       margin-bottom: 40px;
-    }
-    .hidden {
-      display: none;
     }
     .social-links a {
       margin-right: 10px;
       text-decoration: none;
       color: #0a3d62;
     }
+    .hidden {
+      display: none;
+    }
     .last-updated {
       position: fixed;
       bottom: 10px;
       right: 10px;
-      font-size: 0.8rem;
+      font-size: 12px;
       color: #333;
+    }
+
+    /* Responsive Styles */
+    @media (max-width: 768px) {
+      .navbar {
+        flex-direction: column;
+        text-align: center;
+      }
+      .header {
+        flex-direction: column;
+        align-items: center;
+      }
+      .profile-photo {
+        margin-right: 0;
+        margin-bottom: 20px;
+      }
+      .content {
+        margin: 20px;
+      }
+      .last-updated {
+        font-size: 10px;
+      }
     }
   </style>
 </head>
 <body>
   <!-- Navbar -->
   <div class="navbar">
-    <div class="navbar-left">Vikrant Vilas Kamble</div>
+    <div class="navbar-left">
+      Vikrant V Kamble
+    </div>
     <div class="navbar-right">
       <a href="#home" onclick="showSection('home')">Home</a>
       <a href="#research" onclick="showSection('research')">Research</a>
@@ -106,11 +120,13 @@
   
   <!-- Content -->
   <div class="content">
+    <!-- Home Section -->
     <div id="home" class="header">
       <img src="pic1.png" alt="Profile photo of Vikrant Vilas Kamble" class="profile-photo">
       <div class="header-text">
         <h1>Welcome! My name is Vikrant.</h1>
-        <p>I am a 4th-year PhD candidate in Economics at the University of Delaware...</p>
+        <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India...</p>
+        <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
         <div class="social-links">
           <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en" target="_blank">Google Scholar</a>
           <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
@@ -118,10 +134,25 @@
         </div>
       </div>
     </div>
+    
+    <!-- Research Section -->
+    <div id="research" class="section hidden">
+      <h2>Research</h2>
+      <h3>Publications</h3>
+      <p>"Noncustodial parents, instrumental networks, and child support compliance" with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger...</p>
+    </div>
 
-    <div id="research" class="section hidden"><h2>Research</h2>...</div>
-    <div id="teaching" class="section hidden"><h2>Teaching</h2>...</div>
-    <div id="resources" class="section hidden"><h2>Resources</h2>...</div>
+    <!-- Teaching Section -->
+    <div id="teaching" class="section hidden">
+      <h2>Teaching</h2>
+      <p>I will be teaching ECON101: Introduction to Microeconomics in Winter 2025...</p>
+    </div>
+
+    <!-- Resources Section -->
+    <div id="resources" class="section hidden">
+      <h2>Resources</h2>
+      <p>Stata Resources: <a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a>...</p>
+    </div>
   </div>
 
   <!-- Last Updated Section -->
@@ -129,9 +160,13 @@
     Last updated on: <span id="update-date"></span>
   </div>
 
+  <!-- JavaScript for Section Navigation and Last Updated Date -->
   <script>
     function showSection(section) {
-      document.querySelectorAll('.section').forEach(s => s.classList.add('hidden'));
+      const sections = ['home', 'research', 'teaching', 'resources'];
+      sections.forEach(s => {
+        document.getElementById(s).classList.add('hidden');
+      });
       document.getElementById(section).classList.remove('hidden');
     }
 
@@ -139,7 +174,9 @@
       showSection('home');
       const lastUpdatedDate = new Date(document.lastModified);
       document.getElementById('update-date').textContent = lastUpdatedDate.toLocaleDateString('en-US', {
-        year: 'numeric', month: 'long', day: 'numeric'
+        year: 'numeric',
+        month: 'long',
+        day: 'numeric'
       });
     });
   </script>
