--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       color: black;
     }
     .content {
-      margin: 40px 7cm;
+      margin: 40px 7cm; /* Increased margin to 7 cm */
     }
     .header {
       display: flex;
@@ -77,50 +77,6 @@
       font-size: 12px;
       color: #333;
     }
-
-    /* Mobile Navigation */
-    @media (max-width: 768px) {
-      .navbar-right {
-        display: none; /* Hide original navigation */
-      }
-      .navbar {
-        justify-content: space-between;
-        padding: 10px;
-      }
-      .navbar-left {
-        font-size: 1.2em;
-      }
-      .mobile-menu {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        font-size: 1.5em;
-        color: white;
-      }
-      /* Dropdown dots */
-      .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #0a3d62;
-        min-width: 100px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1;
-        margin-top: 10px;
-      }
-      .dropdown-content a {
-        color: white;
-        padding: 10px;
-        text-decoration: none;
-        display: block;
-        text-align: center;
-      }
-      .dropdown-content a:hover {
-        background-color: #ddd;
-        color: black;
-      }
-      .show {display: block;}
-    }
   </style>
 </head>
 <body>
@@ -134,13 +90,6 @@
       <a href="#research" onclick="showSection('research')">Research</a>
       <a href="#teaching" onclick="showSection('teaching')">Teaching</a>
       <a href="#resources" onclick="showSection('resources')">Resources</a> <!-- Resources section in Navbar -->
-    </div>
-    <!-- Mobile Menu for Small Screens -->
-    <div class="mobile-menu" onclick="toggleMenu()">&#x2022;&#x2022;&#x2022;</div>
-    <div class="dropdown-content" id="dropdownMenu">
-      <a href="#research" onclick="showSection('research'); toggleMenu()">Research</a>
-      <a href="#teaching" onclick="showSection('teaching'); toggleMenu()">Teaching</a>
-      <a href="#resources" onclick="showSection('resources'); toggleMenu()">Resources</a>
     </div>
   </div>
   
@@ -183,51 +132,90 @@
       <p>I will be teaching ECON101: Introduction to Microeconomics in Winter 2025.</p>
       <h3>TA Courses</h3>
       <p>Graduate Courses:</p>
-      <ul>
-        <li>ECON814 | Macroeconomics Theory II | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
-        <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a></li>
-      </ul>
-      <p>Undergraduate Courses:</p>
-      <ul>
-        <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></li>
-        <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
-        <li>ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/" target="_blank">Dr. Olga Gorbachev</a></li>
-      </ul>
+    <ul>
+      <li>ECON814 | Macroeconomics Theory II | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
+      <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a></li>
+    </ul>
+    <p>Undergraduate Courses:</p>
+    <ul>
+      <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></li>
+      <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
+      <li>ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/" target="_blank">Dr. Olga Gorbachev</a></li>
+    </ul>
+
     </div>
 
     <!-- Resources Section -->
     <div id="resources" class="section hidden">
       <h2>Resources</h2>
-      <p>To be updated soon...</p>
+      <h3><u>Stata Resources</u></h3>
+      <ul>
+        <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
+        <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
+        <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
+        <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
+      </ul>
+      <h3><u>LaTeX Resources</u></h3>
+      <ul>
+        <li><a href="https://www.overleaf.com/latex/templates" target="_blank">Overleaf Templates</a></li>
+      </ul>
+
+      <h3><u>Data Resources</u></h3>
+      <h4>Surveys</h4>
+      <ul>
+        <li><a href="https://www.ipums.org/" target="_blank">IPUMS</a></li>
+        <li><a href="https://www.census.gov/programs-surveys/cps.html" target="_blank">Current Population Survey (CPS)</a></li>
+        <li><a href="https://www.nber.org/research/data?page=1&perPage=50" target="_blank">NBER Public Use Data Archive</a></li>
+      </ul>
+
+      <h4>Health-related Surveys</h4>
+      <ul>
+      <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey (NHIS)</a></li>
+      <li><a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
+      <li><a href="https://www.cdc.gov/nchs/nhanes/index.htm" target="_blank">National Health and Nutrition Examination Survey (NHANES)</a></li>
+      <li><a href="https://www.meps.ahrq.gov/mepsweb/" target="_blank">Medical Expenditure Panel Survey (MEPS)</a></li>
+      <li><a href="https://nsduhweb.rti.org/respweb/homepage.cfm" target="_blank">National Survey on Drug Use and Health (NSDUH)</a></li>
+      <li><a href="https://www.cdc.gov/healthyyouth/data/yrbs/index.htm" target="_blank">Youth Risk Behavior Surveillance System (YRBSS)</a></li>
+      <li><a href="https://www.cdc.gov/nchs/namcs/about/?CDC_AAref_Val=https://www.cdc.gov/nchs/ahcd/about_ahcd.htm" target="_blank">National Ambulatory Medical Care Survey (NAMCS)</a></li>
+      <li><a href="https://www.cdc.gov/nchs/nhamcs/about/?CDC_AAref_Val=https://www.cdc.gov/nchs/ahcd/about_ahcd.htm" target="_blank">National Hospital Ambulatory Medical Care Survey (NHAMCS)</a></li>
+      <li><a href="https://www.hcup-us.ahrq.gov/" target="_blank">Healthcare Cost and Utilization Project (HCUP)</a></li>
+      <li><a href="https://www.cdc.gov/nchs/nvss/index.htm" target="_blank">National Vital Statistics System (NVSS)</a></li>
+      <li><a href="https://www.bls.gov/tus/" target="_blank">American Time Use Survey (ATUS)</a></li>
+      <li><a href="https://seer.cancer.gov/" target="_blank">Surveillance, Epidemiology, and End Results Program (SEER)</a></li>
+      <li><a href="https://www.niaaa.nih.gov/research/nesarc-iii" target="_blank">National Epidemiologic Survey on Alcohol and Related Conditions (NESARC)</a></li>
+      </ul>
+
+
     </div>
   </div>
 
-  <div class="last-updated">Last updated: October 24, 2024</div>
+  <!-- Last Updated Section -->
+  <div class="last-updated" id="last-updated">
+    Last updated on: <span id="update-date"></span>
+  </div>
 
+  <!-- JavaScript for Section Navigation and Last Updated Date -->
   <script>
-    function showSection(sectionId) {
-      var sections = document.querySelectorAll(".section");
-      sections.forEach(function(section) {
-        section.classList.add("hidden");
+    function showSection(section) {
+      const sections = ['home', 'research', 'teaching', 'resources'];
+      sections.forEach(s => {
+        document.getElementById(s).classList.add('hidden');
       });
-      document.getElementById(sectionId).classList.remove("hidden");
+      document.getElementById(section).classList.remove('hidden');
     }
 
-    function toggleMenu() {
-      document.getElementById("dropdownMenu").classList.toggle("show");
-    }
-    
-    window.onclick = function(event) {
-      if (!event.target.matches('.mobile-menu')) {
-        var dropdowns = document.getElementsByClassName("dropdown-content");
-        for (var i = 0; i < dropdowns.length; i++) {
-          if (dropdowns[i].classList.contains('show')) {
-            dropdowns[i].classList.remove('show');
-          }
-        }
-      }
-    }
+    // Show home section by default on page load
+    document.addEventListener('DOMContentLoaded', function() {
+      showSection('home');
+      
+      // Automatically set the last updated date
+      const lastUpdatedDate = new Date(document.lastModified);
+      document.getElementById('update-date').textContent = lastUpdatedDate.toLocaleDateString('en-US', {
+        year: 'numeric',
+        month: 'long',
+        day: 'numeric'
+      });
+    });
   </script>
 </body>
 </html>
-
