--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
     }
     .navbar {
       background-color: #0a3d62;
-      overflow: hidden;
       display: flex;
       justify-content: space-between;
-      flex-wrap: wrap; /* Allow wrapping on smaller screens */
+      align-items: center;
+      padding: 10px;
     }
     .navbar-left {
       color: white;
-      padding: 14px 16px;
+    }
+    .navbar-right {
+      display: flex;
     }
     .navbar-right a {
       color: white;
-      text-align: center;
-      padding: 14px 16px;
+      padding: 10px;
       text-decoration: none;
       display: inline-block;
     }
@@ -61,7 +62,6 @@
     }
     .section {
       margin-bottom: 40px;
-      display: none; /* Hide all sections by default */
     }
     .social-links a {
       margin-right: 10px;
@@ -78,8 +78,8 @@
       font-size: 12px;
       color: #333;
     }
-    
-    /* Collapsible button styles */
+
+    /* Collapsible button styles for mobile */
     .collapsible {
       background-color: #0a3d62;
       color: white;
@@ -90,26 +90,23 @@
       text-align: left;
       outline: none;
       font-size: 16px;
+      margin: 0; /* Remove margin for mobile layout */
     }
     .active, .collapsible:hover {
       background-color: #ddd;
       color: black;
     }
 
-    /* Responsive Styles */
+    /* Mobile Styles */
     @media (max-width: 768px) {
-      .navbar {
-        flex-direction: column;
-        align-items: flex-start;
+      .navbar-right {
+        display: none; /* Hide regular navbar on mobile */
       }
-      .navbar-right a {
-        padding: 10px;
-        text-align: left;
-        display: block;
-        width: 100%;
+      .collapsible {
+        display: block; /* Show collapsible buttons on mobile */
       }
       .content {
-        margin: 20px 1cm;
+        margin: 20px 1cm; /* Adjust margin for mobile */
       }
       .header {
         flex-direction: column;
@@ -128,6 +125,12 @@
   <div class="navbar">
     <div class="navbar-left">
       Vikrant V Kamble
+    </div>
+    <div class="navbar-right">
+      <a href="#home" onclick="showSection('home')">Home</a>
+      <a href="#research" onclick="showSection('research')">Research</a>
+      <a href="#teaching" onclick="showSection('teaching')">Teaching</a>
+      <a href="#resources" onclick="showSection('resources')">Resources</a>
     </div>
   </div>
   
@@ -150,7 +153,7 @@
 
     <!-- Research Section -->
     <button class="collapsible">Research</button>
-    <div id="research" class="section">
+    <div id="research" class="section hidden">
       <h3>Publications</h3>
       <p>"Noncustodial parents, instrumental networks, and child support compliance"...</p>
       <h3>Research in Progress</h3>
@@ -162,7 +165,7 @@
 
     <!-- Teaching Section -->
     <button class="collapsible">Teaching</button>
-    <div id="teaching" class="section">
+    <div id="teaching" class="section hidden">
       <h2>Instructor</h2>
       <p>I will be teaching ECON101: Introduction to Microeconomics...</p>
       <h3>TA Courses</h3>
@@ -174,7 +177,7 @@
 
     <!-- Resources Section -->
     <button class="collapsible">Resources</button>
-    <div id="resources" class="section">
+    <div id="resources" class="section hidden">
       <h2>Resources</h2>
       <h3><u>Stata Resources</u></h3>
       <ul>
