--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Vikrant V Kamble - Economics PhD Student">
+  <meta name="description" content="Vikrant V... Kamble - Economics PhD Student">
   <title>Vikrant V Kamble</title>
   <style>
     body {
