--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Vikrant V... Kamble - Economics PhD Student">
-  <title>Vikrant V Kamble</title>
+  <meta name="description" content="Vikrant V Kamble - Economics PhD Student">
+  <title>Vikrant V... Kamble</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -17,7 +17,6 @@
       overflow: hidden;
       display: flex;
       justify-content: space-between;
-      flex-wrap: wrap;
     }
     .navbar-left {
       color: white;
@@ -36,11 +35,10 @@
       color: black;
     }
     .content {
-      margin: 20px 20px;
+      margin: 40px 7cm;
     }
     .header {
       display: flex;
-      flex-wrap: wrap;
       align-items: center;
       margin-bottom: 20px;
     }
@@ -80,7 +78,7 @@
       color: #333;
     }
 
-    /* Responsive Styles */
+    /* Mobile-specific styles */
     @media (max-width: 768px) {
       .navbar {
         flex-direction: column;
@@ -91,7 +89,7 @@
         width: 100%;
       }
       .content {
-        margin: 20px 10px;
+        margin: 20px;
       }
       .profile-photo {
         width: 100px;
