--- a/index.html
+++ b/index.html
@@ -177,21 +177,49 @@
     </div>
 
     <!-- Resources Section -->
-    <div id="resources" class="section hidden">
-      <h2>Resources</h2>
-      <h3><u>Stata Resources</u></h3>
-      <ul>
-        <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
-        <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
-        <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
-        <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
-      </ul>
-      <h3><u>LaTeX Resources</u></h3>
-      <ul>
-        <li><a href="https://www.overleaf.com/" target="_blank">Overleaf</a></li>
-        <li><a href="https://www.latex-project.org/" target="_blank">LaTeX Project</a></li>
-      </ul>
-    </div>
+<div id="resources" class="section hidden">
+  <h2>Resources</h2>
+  
+  <h3><u>Stata Resources</u></h3>
+  <ul>
+    <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
+    <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
+    <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
+    <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
+  </ul>
+
+  <h3><u>LaTeX Resources</u></h3>
+  <ul>
+    <li><a href="https://www.overleaf.com/latex/templates" target="_blank">Overleaf Templates</a></li>
+  </ul>
+
+  <h3><u>Data Resources</u></h3>
+
+  <h4>Surveys</h4>
+  <ul>
+    <li><a href="https://www.ipums.org/" target="_blank">IPUMS</a></li>
+    <li><a href="https://www.census.gov/programs-surveys/cps.html" target="_blank">Current Population Survey (CPS)</a></li>
+    <li><a href="https://www.nber.org/research/data?page=1&perPage=50" target="_blank">NBER Public Use Data Archive</a></li>
+  </ul>
+
+  <h4>Health-related Surveys</h4>
+  <ul>
+    <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey (NHIS)</a></li>
+    <li><a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
+    <li><a href="https://www.cdc.gov/nchs/nhanes/index.htm" target="_blank">National Health and Nutrition Examination Survey (NHANES)</a></li>
+    <li><a href="https://www.meps.ahrq.gov/mepsweb/" target="_blank">Medical Expenditure Panel Survey (MEPS)</a></li>
+    <li><a href="https://nsduhweb.rti.org/respweb/homepage.cfm" target="_blank">National Survey on Drug Use and Health (NSDUH)</a></li>
+    <li><a href="https://www.cdc.gov/healthyyouth/data/yrbs/index.htm" target="_blank">Youth Risk Behavior Surveillance System (YRBSS)</a></li>
+    <li><a href="https://www.cdc.gov/nchs/namcs/about/?CDC_AAref_Val=https://www.cdc.gov/nchs/ahcd/about_ahcd.htm" target="_blank">National Ambulatory Medical Care Survey (NAMCS)</a></li>
+    <li><a href="https://www.cdc.gov/nchs/nhamcs/about/?CDC_AAref_Val=https://www.cdc.gov/nchs/ahcd/about_ahcd.htm" target="_blank">National Hospital Ambulatory Medical Care Survey (NHAMCS)</a></li>
+    <li><a href="https://www.hcup-us.ahrq.gov/" target="_blank">Healthcare Cost and Utilization Project (HCUP)</a></li>
+    <li><a href="https://www.cdc.gov/nchs/nvss/index.htm" target="_blank">National Vital Statistics System (NVSS)</a></li>
+    <li><a href="https://www.bls.gov/tus/" target="_blank">American Time Use Survey (ATUS)</a></li>
+    <li><a href="https://seer.cancer.gov/" target="_blank">Surveillance, Epidemiology, and End Results Program (SEER)</a></li>
+    <li><a href="https://www.niaaa.nih.gov/research/nesarc-iii" target="_blank">National Epidemiologic Survey on Alcohol and Related Conditions (NESARC)</a></li>
+  </ul>
+</div>
+
   </div>
 
   <!-- Last Updated Section -->
