--- a/index.html
+++ b/index.html
@@ -50,13 +50,15 @@
     .content {
       padding: 20px;
       text-align: justify; /* Ensures text justification */
+      margin-left: 3cm; /* Adds left and right margins */
+      margin-right: 3cm;
     }
 
     /* Profile Photo */
     .profile-photo {
       display: block;
       margin: 20px auto;
-      width: 200px; /* Larger and rectangular */
+      width: 300px; /* Increased width */
       height: auto;
     }
 
@@ -83,8 +85,8 @@
 </head>
 <body>
   <!-- Title and Subtitle -->
-  <div class="title-section">Vikrant Kamble</div>
-  <div class="subtitle-section">University of Delaware, Department of Economics</div>
+  <div class="title-section">Vikrant V Kamble</div>
+  <div class="subtitle-section">PhD Student, Department of Economics, University of Delaware</div>
 
   <!-- Navbar -->
   <div class="navbar">
