--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       display: flex;
       justify-content: center;
       padding: 10px 0;
+      margin-left: 8cm;
+      margin-right: 8cm;
     }
     .navbar a {
       color: #ffffff;
@@ -95,6 +97,8 @@
       .navbar {
         flex-direction: column;
         padding: 15px 0;
+        margin-left: 0;
+        margin-right: 0;
       }
       .navbar a {
         margin: 10px 0;
@@ -116,6 +120,12 @@
         font-size: 0.9em;
       }
     }
+
+    /* Remove bold from content text */
+    .content p, .content ul {
+      font-weight: normal;
+    }
+
   </style>
 </head>
 <body>
