--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      margin-top: 3cm; /* Added top margin for body */
+      margin-top: 3cm; /* Top margin for body */
     }
 
     /* Header Title Section */
@@ -37,7 +37,7 @@
       padding: 10px 0;
       margin-left: 8cm;
       margin-right: 8cm;
-      margin-top: 3cm; /* Added top margin for navbar */
+      margin-top: 3cm; /* Top margin for navbar */
     }
     .navbar a {
       color: #ffffff;
@@ -69,6 +69,7 @@
     /* Section Styles */
     .section {
       display: none; /* Hidden by default */
+      margin-top: 2cm; /* 2 cm top margin for each section */
     }
     .section.active {
       display: block;
