--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 
       .navbar {
         flex-direction: column;
+        align-items: center; /* Center the navbar items */
         padding: 15px 0;
         margin-left: 0;
         margin-right: 0;
