--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      margin-top: 3cm; /* Top margin for body */
+      margin-top: 3cm; /* Top margin for the body */
     }
 
-    /* Header Title Section */
+    /* Title and Subtitle Section */
     .title-section {
       text-align: center;
-      margin-top: 40px;
       font-size: 1.8em;
       font-weight: bold;
       color: #333;
+      margin-top: 0; /* Title section should have no top margin */
     }
     .subtitle-section {
       text-align: center;
       font-size: 1em;
       color: #777;
-      margin-top: 8px;
+      margin-top: 0; /* Subtitle should have no top margin */
     }
 
     /* Navbar Styles */
@@ -37,7 +37,7 @@
       padding: 10px 0;
       margin-left: 8cm;
       margin-right: 8cm;
-      margin-top: 3cm; /* Top margin for navbar */
+      margin-top: 2cm; /* Navbar should have a top margin of 2cm */
     }
     .navbar a {
       color: #ffffff;
@@ -196,7 +196,6 @@
 
     <!-- Resources Section -->
     <div id="resources" class="section">
-      <h2>Resources</h2>
       <h3>Stata Resources</h3>
       <ul>
         <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
